# a_walk_around_the_block

./: Cargo.toml  README.md
.github/workflows/: release.yaml
assets/models/: chicken.glb  chickendog.glb  chip.glb  chunk.glb  dog.glb  person.glb  person_02.glb  person_03.glb  person_04.glb  poop.glb  worm.glb
assets/textures/: 6
files/models/: chicken.blend  chicken.blend1  chickendog.blend  chickendog.blend1  chip.blend  chip.blend1  chunk.blend  chunk.blend1  dog.blend  dog.blend1  person.blend  person.blend1  poop.blend  poop.blend1  worm.blend  worm.blend1
src/: asset_loading.rs  assets.rs  bot.rs  collision.rs  component_adder.rs  follow_text.rs  game_camera.rs  game_state.rs  ingame.rs  ingame_ui.rs  leash.rs  main.rs  menus.rs  mesh.rs  pickup.rs  player.rs  score_display.rs  target.rs  title_screen.rs
src/menus/: options.rs
wasm/: index.html
