[package]
name = "pet_wants"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.7.0"
leafwing-input-manager = "0.3.0"
bevy_kira_audio = { version = "0.10.0", features = ["wav"]}
noise = "0.7.0"
rand = "0.8"
bevy_infinite_grid = "0.2.1"
